Fixed inability to play video on mobile

--- a/app/assets/stylesheets/_scaffolds.scss
+++ b/app/assets/stylesheets/_scaffolds.scss
@@ -94,7 +94,6 @@ div {
 
   .overlay {
     background-color: rgba(44,44,44,.85);
-    // height: 100%;
     padding-bottom: $spacing-unit;
   }
 
@@ -112,55 +111,76 @@ div {
   }
 }
 
+.anniversary {
+  background: #555 url(anniversary.png) center center no-repeat;
+  background-size: cover;
+
+  .overlay { background-color: rgba($anniversary-color, .45); }
+}
+.generic {
+  background: #555 url(generic.png) center center no-repeat;
+  background-size: cover;
+}
+.wedding {
+  background: #555 url(wedding.png) center center no-repeat;
+  background-size: cover;
+}
+.birthday {
+  background: #555 url(birthday.png) center center no-repeat;
+  background-size: cover;
+
+  .overlay { background-color: rgba($birthday-color, .55); }
+}
+.congratulations {
+  background: #555 url(congratulations.png) center center no-repeat;
+  background-size: cover;
+}
+.thank_you {
+  background: #555 url(thank_you.png) center center no-repeat;
+  background-size: cover;
+}
+.sympathy {
+  background: #555 url(sympathy.png) center center no-repeat;
+  background-size: cover;
+
+  .overlay { background-color: rgba($sympathy-color, .45); }
+}
+
 .showcardcontainer {
   &.anniversary {
-    background: #555 url(anniversary.png) center center no-repeat;
-    background-size: cover;
+    @extend .anniversary;
     background-attachment: fixed;
   }
   &.generic {
-    background: #555 url(generic.png) center center no-repeat;
-    background-size: cover;
+    @extend .generic;
     background-attachment: fixed;
   }
   &.wedding {
-    background: #555 url(wedding.png) center center no-repeat;
-    background-size: cover;
+    @extend .wedding;
     background-attachment: fixed;
   }
   &.birthday {
-    background: #555 url(birthday.png) center center no-repeat;
-    background-size: cover;
+    @extend .birthday;
     background-attachment: fixed;
   }
   &.congratulations {
-    background: #555 url(congratulations.png) center center no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-  }
-  &.generic {
-    background: #555 url(generic.png) center center no-repeat;
-    background-size: cover;
+    @extend .congratulations;
     background-attachment: fixed;
   }
   &.thank_you {
-    background: #555 url(thank_you.png) center center no-repeat;
-    background-size: cover;
+    @extend .thank_you;
     background-attachment: fixed;
   }
   &.sympathy {
-    background: #555 url(sympathy.png) center center no-repeat;
-    background-size: cover;
+    @extend .sympathy;
     background-attachment: fixed;
   }
-
 }
 
 .card {
   color: white;
 
   .overlay {
-    background-color: rgba(44,44,44,.50);
     height: 100%;
     min-height: 100%;
     padding: 30px;
@@ -172,9 +192,6 @@ div {
     min-height: 100%;
     z-index: 25;
   }
-
-
-
 }
 
 #examples {
@@ -225,6 +242,10 @@ div {
 
 h3 {
   margin-bottom: 25px;
+}
+
+.jwplayer {
+  width: 100% !important;
 }
 
 /////////// BUTTONS
