--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,3 +1,7 @@
 $primary-color: #41d56a;
 
+$anniversary-color: #ce605a;
+$birthday-color:    #9aa2c7;
+$sympathy-color:    #77aa12;
+
 $spacing-unit: 60px;
